@@ -4,15 +4,9 @@ import android.content.Context;
 import android.content.Intent;
 
 import androidx.annotation.NonNull;
-import androidx.annotation.Nullable;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
-import java.util.ListIterator;
 
 import jOS.Core.LIBTestActivity;
 import jOS.Core.jAboutActivity;
@@ -28,7 +22,7 @@ public class About extends jAboutActivity {
     @NonNull
     @Override
     public List<Link> links() {
-        return new ArrayList<>(Arrays.asList(
+        return new ArrayList<>(List.of(
                 new Link(
                         jOS.Core.R.drawable.ic_github,
                         jOS.Core.R.string.github,
@@ -39,7 +33,7 @@ public class About extends jAboutActivity {
     @NonNull
     @Override
     public List<jAboutActivity.Contributor> product() {
-        return new ArrayList() {{
+        return new ArrayList<>() {{
             add(new Contributor("._______166", Role.LeadDev, "https://avatars.githubusercontent.com/u/62702353", "https://github.com/dot166"));
         }};
     }
